source/reference/api/snapshots/change-expiry-for-one-snapshot.txt
=================================
Change the Expiry of One Snapshot
=================================

.. default-domain:: mongodb

.. contents:: On this page
   :local:
   :backlinks: none
   :depth: 2
   :class: singlecol

.. include:: /includes/api/base-api-uri.rst

Syntax
------

.. code-block:: http

   PATCH /api/public/v1.0/groups/{groupId}/clusters/{clusterId}/snapshots/{snapshotId}

Request Parameters
------------------

Request Path Parameters
~~~~~~~~~~~~~~~~~~~~~~~

.. list-table::
   :widths: 20 20 60
   :header-rows: 1

   * - ``Name``
     - Type
     - Description

   * - ``groupId``
     - string
     - ID of the :term:`group` that owns the :term:`snapshot`.

   * - ``clusterId``
     - string
     - ID of the cluster that the :term:`snapshot` represents.

   * - ``snapshotId``
     - string
     - ID of the :term:`snapshot`.

Request Query Parameters
~~~~~~~~~~~~~~~~~~~~~~~~

.. include:: /includes/api/no-query-parameters.rst

Request Body Parameters
~~~~~~~~~~~~~~~~~~~~~~~

.. list-table::
   :widths: 20 20 60
   :header-rows: 1

   * - Name
     - Type
     - Description

   * - ``doNotDelete``
     - boolean
     - Indicator that the snapshot cannot be deleted.

       .. important::
          You cannot set ``doNotDelete`` to ``true`` *and* set a
          timestamp for ``expires`` in the same request. If you do,
          |mms| returns an error: ``Cannot modify snapshot because of
          invalid fields.``

   * - ``expires``
     - timestamp
     - The date in `ISO 8601
       <https://en.wikipedia.org/wiki/ISO_8601?oldid=793821205>`_ date
       and time format at :abbr:`UTC (Coordinated Universal Time)` after
       which this snapshot can be deleted.

       If ``doNotDelete`` is set to ``true``, any existing value in
       ``expires`` is removed.

       If ``expires`` is set to a timestamp at or before the current
       date and time, |mms| deletes the snapshot at its next
       opportunity. There is no guarantee that the snapshot would be
       deleted immediately.

       If the current ``expires`` timestamp has already passed, it
       cannot be edited.

Response Elements
-----------------

.. include:: /includes/api/list-tables/snapshot-rs-documents.rst

``links`` Array
~~~~~~~~~~~~~~~

The ``links`` array includes one or more links to sub-resources and/or
related resources. The relations between URLs are explained in the `Web
Linking Specification <http://tools.ietf.org/html/rfc5988>`_

.. list-table::
   :header-rows: 1

   * - Relation
     - Description
   * - ``self``
     - The URL endpoint for this resource.

Examples
--------

Example Request
~~~~~~~~~~~~~~~

.. only:: cloud

   .. cssclass:: copyable-code
   .. code-block:: sh
      :emphasize-lines: 6-9

      curl --user "{username}:{apiKey}" --digest \
       --header "Accept: application/json" \
       --header "Content-Type: application/json" \
       --include \
       --request PATCH "https://cloud.mongodb.com/api/public/v1.0/groups/{groupId}/clusters/{clusterId}/snapshots/{snapshotId}?pretty=true" \
       --data '
       {
         "doNotDelete": true
       }'

.. only:: onprem

   .. cssclass:: copyable-code
   .. code-block:: sh
      :emphasize-lines: 6-9

      curl --user "{username}:{apiKey}" --digest \
       --header "Accept: application/json" \
       --header "Content-Type: application/json" \
       --include \
       --request PATCH "https://{opsManagerHost}:{port}/api/public/v1.0/groups/{groupId}/clusters/{clusterId}/snapshots/{snapshotId}?pretty=true" \
       --data '
       {
         "doNotDelete": true
       }'

Example Response
~~~~~~~~~~~~~~~~

Response Header
+++++++++++++++

.. include:: /includes/api/api-headers/401.rst

.. include:: /includes/api/api-headers/200.rst

Response Body
+++++++++++++

.. only:: cloud

   .. code-block:: json
      :emphasize-lines: 9

      {
        "id" : "{snapshotId}",
        "clusterId" : "{clusterId}",
        "complete" : true,
        "created" : {
          "date" : "2014-07-09T15:24:37Z",
          "increment" : 1
        },
        "doNotDelete" : true,
        "groupId" : "{groupId}",
        "links" : [ {
          "href" : "https://cloud.mongodb.com/api/public/v1.0/groups/{groupId}/clusters/{clusterId}/snapshots/{snapshotId}",
         "rel" : "self"
        } ],
        "parts" : [ {
          "clusterId" : "{clusterId}",
          "dataSizeBytes" : 17344,
          "fileSizeBytes" : 67108864,
          "mongodVersion" : "2.6.3",
          "replicaSetName" : "rs0",
          "storageSizeBytes" : 10502144,
          "typeName" : "REPLICA_SET"
        } ],
      }

.. only:: onprem

   .. code-block:: json
      :emphasize-lines: 9

      {
        "id" : "{snapshotId}",
        "clusterId" : "{clusterId}",
        "complete" : true,
        "created" : {
          "date" : "2014-07-09T15:24:37Z",
          "increment" : 1
        },
        "doNotDelete" : true,
        "groupId" : "{groupId}",
        "links" : [ {
          "href" : "https://{opsManagerHost}:{port}/api/public/v1.0/groups/{groupId}/clusters/{clusterId}/snapshots/{snapshotId}",
         "rel" : "self"
        } ],
        "parts" : [ {
          "clusterId" : "{clusterId}",
          "dataSizeBytes" : 17344,
          "fileSizeBytes" : 67108864,
          "mongodVersion" : "2.6.3",
          "replicaSetName" : "rs0",
          "storageSizeBytes" : 10502144,
          "typeName" : "REPLICA_SET"
        } ],
      }
